<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignupActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/signUp"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="textPersonName"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/pw"
        android:inputType="textPassword"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/rePassword"
        android:inputType="textPassword"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/editText6"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/idCondition"
        app:layout_constraintStart_toStartOf="@+id/editText3"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pwCondition"
        app:layout_constraintStart_toStartOf="@+id/editText4"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/editText5"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="18dp"
        app:layout_constraintStart_toStartOf="@+id/editText6"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/editText7"
        app:layout_constraintEnd_toEndOf="@+id/editText7"
        app:layout_constraintTop_toTopOf="@+id/editText7" />


    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:text="@string/signUp2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="@+id/editText5"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/button5"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:background="#FFFFFF"
        android:text="@string/send"
        android:textSize="8sp"
        app:layout_constraintStart_toEndOf="@+id/editText6"
        app:layout_constraintTop_toTopOf="@+id/editText6" />

    <Button
        android:id="@+id/button6"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:background="#FFFFFF"
        android:text="@string/confirm"
        android:textSize="8sp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/editText7"
        app:layout_constraintTop_toTopOf="@+id/editText7" />

</androidx.constraintlayout.widget.ConstraintLayout>